--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.0.0",
-    "constructs": "^10.0.0"
+    "aws-cdk-lib": "^2.137.0",
+    "constructs": "^10.3.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0",
+    "typescript": "^4.9.0",
     "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0",
-    "@aws-cdk/assertions": "^2.0.0"
+    "ts-jest": "^29.0.0"
   }
 }
