--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -25,11 +25,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install AWS CDK CLI
+        run: npm install -g aws-cdk
+
       - name: Build project
         run: npm run build
 
       - name: Run CDK synth
-        run: npx cdk synth
+        run: cdk synth
 
       - name: Run CDK tests
         run: npm test || echo "No tests defined"
