--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "constructs": "^10.3.0"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.0"
   }
 }
