--- a/.github/workflows/cdk.yml
+++ b/.github/workflows/cdk.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build-and-test:
-    name: Build, synth and test CDK
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +19,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: npm ci
@@ -32,7 +31,7 @@ jobs:
         run: npm run build
 
       - name: Run CDK synth
-        run: cdk synth
+        run: npx cdk synth
 
       - name: Run CDK tests
         run: npm test || echo "No tests defined"
