--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,21 @@
-name: Publish to GitHub Packages and npmjs
+name: Publish Packages
 
 on:
   push:
-    branches:
-      - main
     tags:
-      - 'v*'
+      - 'v*.*.*'
 
 jobs:
-  publish-github:
-    name: Publish to GitHub Packages
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node.js for GitHub Packages
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@elastic2ls-com'
 
       - name: Install dependencies
         run: npm ci
@@ -29,19 +23,14 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Publish to GitHub Packages
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run tests
+        run: npm test
 
   publish-npmjs:
-    name: Publish to npmjs.com
     runs-on: ubuntu-latest
-    needs: publish-github
-
+    needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Node.js for npmjs
         uses: actions/setup-node@v3
@@ -49,14 +38,27 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org/'
 
-      - name: Install dependencies
-        run: npm ci
+      - run: npm ci
 
-      - name: Build project
-        run: npm run build
-
-      - name: Publish to npmjs
-        run: npm publish --access public
+      - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  publish-github:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Node.js for GitHub Packages
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+          registry-url: 'https://npm.pkg.github.com/'
+
+      - run: npm ci
+
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
